--- a/index.html
+++ b/index.html
@@ -3,145 +3,137 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>PhysicsTreker — Limited Memory AI</title>
+  <title>FizQateLab — Limited Memory AI</title>
   <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-  <header class="topbar">
+  <header class="header">
     <div class="brand">
-      <div class="logo">PT</div>
+      <div class="logo">FQ</div>
       <div>
-        <div class="title">PhysicsTreker</div>
-        <div class="subtitle">Limited Memory AI (оқушы қателерін есте сақтайды)</div>
+        <div class="name">FizQateLab</div>
+        <div class="tag">Limited Memory AI (қателерді жіктеп сақтайды)</div>
       </div>
     </div>
-    <div class="right">
+
+    <div class="actions">
       <span id="who" class="chip hidden"></span>
       <button id="btnLogout" class="btn ghost hidden">Шығу</button>
     </div>
   </header>
 
-  <main class="container">
-
-    <!-- Экран 1: Кіру -->
-    <section id="screenAuth" class="card">
-      <h2>Кіру</h2>
-      <p class="muted">Оқушы немесе мұғалім ретінде кір.</p>
+  <main class="wrap">
+    <!-- LOGIN -->
+    <section id="screenLogin" class="card">
+      <h1>Кіру</h1>
+      <p class="muted">Оқушы порталы немесе Мұғалім панелі арқылы кір.</p>
 
       <div class="tabs">
-        <button class="tab active" data-role="student">Оқушы</button>
-        <button class="tab" data-role="teacher">Мұғалім</button>
+        <button class="tab active" data-role="student">Оқушы порталы</button>
+        <button class="tab" data-role="teacher">Мұғалім панелі</button>
       </div>
 
       <div class="grid2">
         <div>
-          <label>Логин (аты-жөні / код)</label>
-          <input id="authLogin" placeholder="мыс: Diana немесе 8A_01"/>
+          <label class="lbl">Логин (аты-жөні / код)</label>
+          <input id="loginId" class="inp" placeholder="мыс: Diana немесе 8A_01"/>
         </div>
         <div>
-          <label>Пароль</label>
-          <input id="authPass" type="password" placeholder="••••"/>
+          <label class="lbl">Пароль</label>
+          <input id="loginPass" class="inp" type="password" placeholder="••••"/>
         </div>
       </div>
 
-      <div class="row">
-        <button id="btnLogin" class="btn primary">Кіру</button>
-        <span id="authHint" class="muted"></span>
-      </div>
+      <button id="btnLogin" class="btn primary">Кіру</button>
 
-      <div class="note">
-        <b>Демо-парольдер:</b>
+      <div class="hint">
+        <div class="hint-title">Демо-парольдер:</div>
         <ul>
-          <li>Оқушы: пароль <code>1234</code></li>
-          <li>Мұғалім: пароль <code>admin</code></li>
+          <li><b>Оқушы:</b> 1234</li>
+          <li><b>Мұғалім:</b> admin</li>
         </ul>
       </div>
     </section>
 
-    <!-- Экран 2: Оқушы панелі -->
-    <section id="screenStudent" class="hidden">
-      <div class="card">
-        <h2>Оқушы панелі</h2>
-        <p class="muted">Алдымен әлсіз тақырыптарыңа көбірек сұрақ беріледі (Limited Memory).</p>
-
-        <div class="grid3">
-          <div class="stat">
-            <div class="statNum" id="stAttempts">0</div>
-            <div class="statTxt">Әрекет саны</div>
-          </div>
-          <div class="stat">
-            <div class="statNum" id="stAccuracy">0%</div>
-            <div class="statTxt">Дұрыстық</div>
-          </div>
-          <div class="stat">
-            <div class="statNum" id="stWeak">—</div>
-            <div class="statTxt">Әлсіз тақырып</div>
-          </div>
-        </div>
-
-        <div class="row">
-          <button id="btnStartQuiz" class="btn primary">Тест бастау</button>
-          <button id="btnStudentHistory" class="btn ghost">Қателерім</button>
-        </div>
+    <!-- STUDENT -->
+    <section id="screenStudent" class="card hidden">
+      <div class="row">
+        <h2>Оқушы порталы</h2>
+        <span class="badge">Қате → Есте сақтау → Кеңес</span>
       </div>
 
-      <div id="quizBox" class="card hidden"></div>
-      <div id="studentModal" class="modal hidden"></div>
-    </section>
+      <div class="block">
+        <h3>1) Тақырып таңда</h3>
+        <select id="topic" class="inp">
+          <option value="electric_field">Электр өрісі</option>
+          <option value="potential">Потенциал</option>
+          <option value="voltage">Кернеу</option>
+          <option value="work_energy">Жұмыс және энергия</option>
+        </select>
+        <p class="muted small">Жүйе осы тақырып бойынша сенің қателеріңді бөлек сақтайды.</p>
+      </div>
 
-    <!-- Экран 3: Мұғалім панелі -->
-    <section id="screenTeacher" class="hidden">
-      <div class="card">
-        <h2>Мұғалім панелі</h2>
-        <p class="muted">Сұрақ қосу + аналитика (оқушылардың қателері, әлсіз тақырыптары).</p>
+      <div class="block">
+        <h3>2) Қателігіңді енгіз</h3>
 
         <div class="grid2">
-          <div class="card inner">
-            <h3>Сұрақ қосу</h3>
-
-            <label>Тақырып</label>
-            <select id="qTopic"></select>
-
-            <label>Сұрақ мәтіні</label>
-            <textarea id="qText" rows="3" placeholder="мыс: Потенциал деген не?"></textarea>
-
-            <label>Жауап нұсқалары</label>
-            <input id="qA" placeholder="A) ..."/>
-            <input id="qB" placeholder="B) ..."/>
-            <input id="qC" placeholder="C) ..."/>
-            <input id="qD" placeholder="D) ..."/>
-
-            <label>Дұрыс жауап (A/B/C/D)</label>
-            <input id="qCorrect" maxlength="1" placeholder="мыс: B"/>
-
-            <label>Түсіндірме (неге бұл дұрыс?)</label>
-            <textarea id="qExplain" rows="3" placeholder="қысқа теориялық түсіндірме..."></textarea>
-
-            <div class="row">
-              <button id="btnAddQuestion" class="btn primary">Қосу</button>
-              <button id="btnResetDemo" class="btn danger ghost">Демоны қалпына келтіру</button>
-            </div>
-            <div id="teacherMsg" class="muted"></div>
+          <div>
+            <label class="lbl">Қате түрі</label>
+            <select id="errType" class="inp">
+              <option value="formula">Формула қателігі</option>
+              <option value="units">Өлшем бірлік қателігі</option>
+              <option value="sign">Белгі/таңба қателігі</option>
+              <option value="logic">Логикалық қателік</option>
+            </select>
           </div>
 
-          <div class="card inner">
-            <h3>Аналитика</h3>
-            <div class="row">
-              <button id="btnRefreshAnalytics" class="btn ghost">Жаңарту</button>
-              <button id="btnExportJSON" class="btn ghost">Export JSON</button>
-            </div>
-
-            <div id="analyticsBox" class="analytics"></div>
+          <div>
+            <label class="lbl">Қысқа сипаттама</label>
+            <input id="errText" class="inp" placeholder="мыс: кВ орнына В қолдандым"/>
           </div>
+        </div>
+
+        <button id="btnSaveError" class="btn primary">Қателікті сақтау</button>
+      </div>
+
+      <div class="block">
+        <h3>3) Менің соңғы қателерім</h3>
+        <div id="studentList" class="list"></div>
+      </div>
+
+      <div class="block">
+        <h3>4) Ұсыныс (Limited Memory)</h3>
+        <div id="advice" class="advice">
+          Әзірге қате жоқ. Бір қателік сақта да, жүйе саған кеңес береді.
         </div>
       </div>
     </section>
 
-  </main>
+    <!-- TEACHER -->
+    <section id="screenTeacher" class="card hidden">
+      <div class="row">
+        <h2>Мұғалім панелі</h2>
+        <span class="badge">Аналитика</span>
+      </div>
 
-  <footer class="footer">
-    <span>© PhysicsTreker • Limited Memory AI прототип</span>
-  </footer>
+      <div class="grid2">
+        <div class="block">
+          <h3>Соңғы 10 жазба</h3>
+          <div id="teacherLast" class="list"></div>
+        </div>
+
+        <div class="block">
+          <h3>Қате түрлері бойынша жиілік</h3>
+          <div id="teacherStats" class="stats"></div>
+          <p class="muted small">Бұл — Limited Memory: жүйе соңғы қателерді жинап, үлгіні көрсетеді.</p>
+        </div>
+      </div>
+    </section>
+
+    <footer class="foot">
+      © FizQateLab • Limited Memory AI прототипі
+    </footer>
+  </main>
 
   <script src="app.js"></script>
 </body>
